libs/core/src/lib/search/oql/OQLParser.ts
// Generated from libs/core/src/lib/search/oql/OQL.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
  ATN,
  ATNDeserializer,
  DecisionState,
  DFA,
  FailedPredicateException,
  RecognitionException,
  NoViableAltException,
  BailErrorStrategy,
  Parser,
  ParserATNSimulator,
  RuleContext,
  ParserRuleContext,
  PredictionMode,
  PredictionContextCache,
  TerminalNode,
  RuleNode,
  Token,
  TokenStream,
  Interval,
  IntervalSet,
} from 'antlr4';
import OQLListener from './OQLListener.js';
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class OQLParser extends Parser {
  public static readonly T__0 = 1;
  public static readonly T__1 = 2;
  public static readonly T__2 = 3;
  public static readonly T__3 = 4;
  public static readonly LPAREN = 5;
  public static readonly RPAREN = 6;
  public static readonly EQ = 7;
  public static readonly GT = 8;
  public static readonly LT = 9;
  public static readonly NEQ = 10;
  public static readonly GTE = 11;
  public static readonly LTE = 12;
  public static readonly COMMA = 13;
  public static readonly AND = 14;
  public static readonly OR = 15;
  public static readonly NOR = 16;
  public static readonly STRING = 17;
  public static readonly SPACE = 18;
  public static readonly NEWLINE = 19;
  public static override readonly EOF = Token.EOF;
  public static readonly RULE_atom = 0;
  public static readonly RULE_sortAtom = 1;
  public static readonly RULE_expression = 2;
  public static readonly RULE_relop = 3;
  public static readonly RULE_logic = 4;
  public static readonly RULE_and = 5;
  public static readonly RULE_or = 6;
  public static readonly RULE_nor = 7;
  public static readonly RULE_field = 8;
  public static readonly RULE_sort = 9;
  public static readonly RULE_value = 10;
  public static readonly literalNames: (string | null)[] = [
    null,
    "'and'",
    "'or'",
    "'nor'",
    "'sort'",
    "'('",
    "')'",
    "'='",
    "'>'",
    "'<'",
    "'!='",
    "'>='",
    "'<='",
    "','",
    "'AND'",
    "'OR'",
    "'NOR'",
    null,
    "' '",
  ];
  public static readonly symbolicNames: (string | null)[] = [
    null,
    null,
    null,
    null,
    null,
    'LPAREN',
    'RPAREN',
    'EQ',
    'GT',
    'LT',
    'NEQ',
    'GTE',
    'LTE',
    'COMMA',
    'AND',
    'OR',
    'NOR',
    'STRING',
    'SPACE',
    'NEWLINE',
  ];
  // tslint:disable:no-trailing-whitespace
  public static readonly ruleNames: string[] = [
    'atom',
    'sortAtom',
    'expression',
    'relop',
    'logic',
    'and',
    'or',
    'nor',
    'field',
    'sort',
    'value',
  ];
  public get grammarFileName(): string {
    return 'OQL.g4';
  }
  public get literalNames(): (string | null)[] {
    return OQLParser.literalNames;
  }
  public get symbolicNames(): (string | null)[] {
    return OQLParser.symbolicNames;
  }
  public get ruleNames(): string[] {
    return OQLParser.ruleNames;
  }
  public get serializedATN(): number[] {
    return OQLParser._serializedATN;
  }

  protected createFailedPredicateException(
    predicate?: string,
    message?: string,
  ): FailedPredicateException {
    return new FailedPredicateException(this, predicate, message);
  }

  constructor(input: TokenStream) {
    super(input);
    this._interp = new ParserATNSimulator(
      this,
      OQLParser._ATN,
      OQLParser.DecisionsToDFA,
      new PredictionContextCache(),
    );
  }
  // @RuleVersion(0)
  public atom(): AtomContext {
    let localctx: AtomContext = new AtomContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, OQLParser.RULE_atom);
    let _la: number;
    try {
      this.state = 42;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case 17:
          this.enterOuterAlt(localctx, 1);
          {
            this.state = 22;
            this.field();
            this.state = 26;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while (_la === 18) {
              {
                {
                  this.state = 23;
                  this.match(OQLParser.SPACE);
                }
              }
              this.state = 28;
              this._errHandler.sync(this);
              _la = this._input.LA(1);
            }
            this.state = 29;
            this.relop();
            this.state = 33;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while (_la === 18) {
              {
                {
                  this.state = 30;
                  this.match(OQLParser.SPACE);
                }
              }
              this.state = 35;
              this._errHandler.sync(this);
              _la = this._input.LA(1);
            }
            this.state = 36;
            this.value();
          }
          break;
        case 5:
          this.enterOuterAlt(localctx, 2);
          {
            this.state = 38;
            this.match(OQLParser.LPAREN);
            this.state = 39;
            this.expression();
            this.state = 40;
            this.match(OQLParser.RPAREN);
          }
          break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public sortAtom(): SortAtomContext {
    let localctx: SortAtomContext = new SortAtomContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 2, OQLParser.RULE_sortAtom);
    let _la: number;
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 44;
        this.sort();
        this.state = 48;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (_la === 18) {
          {
            {
              this.state = 45;
              this.match(OQLParser.SPACE);
            }
          }
          this.state = 50;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
        this.state = 51;
        this.match(OQLParser.EQ);
        this.state = 55;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (_la === 18) {
          {
            {
              this.state = 52;
              this.match(OQLParser.SPACE);
            }
          }
          this.state = 57;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
        this.state = 58;
        this.value();
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public expression(): ExpressionContext {
    let localctx: ExpressionContext = new ExpressionContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 4, OQLParser.RULE_expression);
    let _la: number;
    try {
      let _alt: number;
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 60;
        this.atom();
        this.state = 80;
        this._errHandler.sync(this);
        _alt = this._interp.adaptivePredict(this._input, 8, this._ctx);
        while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
          if (_alt === 1) {
            {
              {
                this.state = 62;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                do {
                  {
                    {
                      this.state = 61;
                      this.match(OQLParser.SPACE);
                    }
                  }
                  this.state = 64;
                  this._errHandler.sync(this);
                  _la = this._input.LA(1);
                } while (_la === 18);
                this.state = 74;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while ((_la & ~0x1f) === 0 && ((1 << _la) & 114702) !== 0) {
                  {
                    {
                      this.state = 66;
                      this.logic();
                      this.state = 68;
                      this._errHandler.sync(this);
                      _la = this._input.LA(1);
                      do {
                        {
                          {
                            this.state = 67;
                            this.match(OQLParser.SPACE);
                          }
                        }
                        this.state = 70;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                      } while (_la === 18);
                    }
                  }
                  this.state = 76;
                  this._errHandler.sync(this);
                  _la = this._input.LA(1);
                }
                this.state = 77;
                this.atom();
              }
            }
          }
          this.state = 82;
          this._errHandler.sync(this);
          _alt = this._interp.adaptivePredict(this._input, 8, this._ctx);
        }
        this.state = 91;
        this._errHandler.sync(this);
        _alt = this._interp.adaptivePredict(this._input, 10, this._ctx);
        while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
          if (_alt === 1) {
            {
              {
                this.state = 84;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                do {
                  {
                    {
                      this.state = 83;
                      this.match(OQLParser.SPACE);
                    }
                  }
                  this.state = 86;
                  this._errHandler.sync(this);
                  _la = this._input.LA(1);
                } while (_la === 18);
                this.state = 88;
                this.sortAtom();
              }
            }
          }
          this.state = 93;
          this._errHandler.sync(this);
          _alt = this._interp.adaptivePredict(this._input, 10, this._ctx);
        }
        this.state = 97;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (_la === 18) {
          {
            {
              this.state = 94;
              this.match(OQLParser.SPACE);
            }
          }
          this.state = 99;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public relop(): RelopContext {
    let localctx: RelopContext = new RelopContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, OQLParser.RULE_relop);
    let _la: number;
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 100;
        _la = this._input.LA(1);
        if (!((_la & ~0x1f) === 0 && ((1 << _la) & 8064) !== 0)) {
          this._errHandler.recoverInline(this);
        } else {
          this._errHandler.reportMatch(this);
          this.consume();
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public logic(): LogicContext {
    let localctx: LogicContext = new LogicContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, OQLParser.RULE_logic);
    try {
      this.state = 108;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case 14:
          this.enterOuterAlt(localctx, 1);
          {
            this.state = 102;
            this.match(OQLParser.AND);
          }
          break;
        case 15:
          this.enterOuterAlt(localctx, 2);
          {
            this.state = 103;
            this.match(OQLParser.OR);
          }
          break;
        case 16:
          this.enterOuterAlt(localctx, 3);
          {
            this.state = 104;
            this.match(OQLParser.NOR);
          }
          break;
        case 1:
          this.enterOuterAlt(localctx, 4);
          {
            this.state = 105;
            this.and();
          }
          break;
        case 2:
          this.enterOuterAlt(localctx, 5);
          {
            this.state = 106;
            this.or();
          }
          break;
        case 3:
          this.enterOuterAlt(localctx, 6);
          {
            this.state = 107;
            this.nor();
          }
          break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public and(): AndContext {
    let localctx: AndContext = new AndContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, OQLParser.RULE_and);
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 110;
        this.match(OQLParser.T__0);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public or(): OrContext {
    let localctx: OrContext = new OrContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, OQLParser.RULE_or);
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 112;
        this.match(OQLParser.T__1);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public nor(): NorContext {
    let localctx: NorContext = new NorContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, OQLParser.RULE_nor);
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 114;
        this.match(OQLParser.T__2);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public field(): FieldContext {
    let localctx: FieldContext = new FieldContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, OQLParser.RULE_field);
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 116;
        this.match(OQLParser.STRING);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public sort(): SortContext {
    let localctx: SortContext = new SortContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, OQLParser.RULE_sort);
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 118;
        this.match(OQLParser.T__3);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public value(): ValueContext {
    let localctx: ValueContext = new ValueContext(this, this._ctx, this.state);
    this.enterRule(localctx, 20, OQLParser.RULE_value);
    let _la: number;
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 120;
        this.match(OQLParser.STRING);
        this.state = 125;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (_la === 13) {
          {
            {
              this.state = 121;
              this.match(OQLParser.COMMA);
              this.state = 122;
              this.match(OQLParser.STRING);
            }
          }
          this.state = 127;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }


  private static __ATN: ATN;
  public static get _ATN(): ATN {
    if (!OQLParser.__ATN) {
      OQLParser.__ATN = new ATNDeserializer().deserialize(
        OQLParser._serializedATN,
      );
    }

    return OQLParser.__ATN;
  }

  static DecisionsToDFA = OQLParser._ATN.decisionToState.map(
    (ds: DecisionState, index: number) => new DFA(ds, index),
  );
}

export class AtomContext extends ParserRuleContext {
  constructor(
    parser?: OQLParser,
    parent?: ParserRuleContext,
    invokingState?: number,
  ) {
    super(parent, invokingState);
    this.parser = parser;
  }
  public field(): FieldContext {
    return this.getTypedRuleContext(FieldContext, 0) as FieldContext;
  }
  public relop(): RelopContext {
    return this.getTypedRuleContext(RelopContext, 0) as RelopContext;
  }
  public value(): ValueContext {
    return this.getTypedRuleContext(ValueContext, 0) as ValueContext;
  }
  public SPACE_list(): TerminalNode[] {
    return this.getTokens(OQLParser.SPACE);
  }
  public SPACE(i: number): TerminalNode {
    return this.getToken(OQLParser.SPACE, i);
  }
  public LPAREN(): TerminalNode {
    return this.getToken(OQLParser.LPAREN, 0);
  }
  public expression(): ExpressionContext {
    return this.getTypedRuleContext(ExpressionContext, 0) as ExpressionContext;
  }
  public RPAREN(): TerminalNode {
    return this.getToken(OQLParser.RPAREN, 0);
  }
  public get ruleIndex(): number {
    return OQLParser.RULE_atom;
  }
  public enterRule(listener: OQLListener): void {
    if (listener.enterAtom) {
      listener.enterAtom(this);
    }
  }
  public exitRule(listener: OQLListener): void {
    if (listener.exitAtom) {
      listener.exitAtom(this);
    }
  }
}

export class SortAtomContext extends ParserRuleContext {
  constructor(
    parser?: OQLParser,
    parent?: ParserRuleContext,
    invokingState?: number,
  ) {
    super(parent, invokingState);
    this.parser = parser;
  }
  public sort(): SortContext {
    return this.getTypedRuleContext(SortContext, 0) as SortContext;
  }
  public EQ(): TerminalNode {
    return this.getToken(OQLParser.EQ, 0);
  }
  public value(): ValueContext {
    return this.getTypedRuleContext(ValueContext, 0) as ValueContext;
  }
  public SPACE_list(): TerminalNode[] {
    return this.getTokens(OQLParser.SPACE);
  }
  public SPACE(i: number): TerminalNode {
    return this.getToken(OQLParser.SPACE, i);
  }
  public get ruleIndex(): number {
    return OQLParser.RULE_sortAtom;
  }
  public enterRule(listener: OQLListener): void {
    if (listener.enterSortAtom) {
      listener.enterSortAtom(this);
    }
  }
  public exitRule(listener: OQLListener): void {
    if (listener.exitSortAtom) {
      listener.exitSortAtom(this);
    }
  }
}

export class ExpressionContext extends ParserRuleContext {
  constructor(
    parser?: OQLParser,
    parent?: ParserRuleContext,
    invokingState?: number,
  ) {
    super(parent, invokingState);
    this.parser = parser;
  }
  public atom_list(): AtomContext[] {
    return this.getTypedRuleContexts(AtomContext) as AtomContext[];
  }
  public atom(i: number): AtomContext {
    return this.getTypedRuleContext(AtomContext, i) as AtomContext;
  }
  public sortAtom_list(): SortAtomContext[] {
    return this.getTypedRuleContexts(SortAtomContext) as SortAtomContext[];
  }
  public sortAtom(i: number): SortAtomContext {
    return this.getTypedRuleContext(SortAtomContext, i) as SortAtomContext;
  }
  public SPACE_list(): TerminalNode[] {
    return this.getTokens(OQLParser.SPACE);
  }
  public SPACE(i: number): TerminalNode {
    return this.getToken(OQLParser.SPACE, i);
  }
  public logic_list(): LogicContext[] {
    return this.getTypedRuleContexts(LogicContext) as LogicContext[];
  }
  public logic(i: number): LogicContext {
    return this.getTypedRuleContext(LogicContext, i) as LogicContext;
  }
  public get ruleIndex(): number {
    return OQLParser.RULE_expression;
  }
  public enterRule(listener: OQLListener): void {
    if (listener.enterExpression) {
      listener.enterExpression(this);
    }
  }
  public exitRule(listener: OQLListener): void {
    if (listener.exitExpression) {
      listener.exitExpression(this);
    }
  }
}

export class RelopContext extends ParserRuleContext {
  constructor(
    parser?: OQLParser,
    parent?: ParserRuleContext,
    invokingState?: number,
  ) {
    super(parent, invokingState);
    this.parser = parser;
  }
  public EQ(): TerminalNode {
    return this.getToken(OQLParser.EQ, 0);
  }
  public NEQ(): TerminalNode {
    return this.getToken(OQLParser.NEQ, 0);
  }
  public GT(): TerminalNode {
    return this.getToken(OQLParser.GT, 0);
  }
  public LT(): TerminalNode {
    return this.getToken(OQLParser.LT, 0);
  }
  public LTE(): TerminalNode {
    return this.getToken(OQLParser.LTE, 0);
  }
  public GTE(): TerminalNode {
    return this.getToken(OQLParser.GTE, 0);
  }
  public get ruleIndex(): number {
    return OQLParser.RULE_relop;
  }
  public enterRule(listener: OQLListener): void {
    if (listener.enterRelop) {
      listener.enterRelop(this);
    }
  }
  public exitRule(listener: OQLListener): void {
    if (listener.exitRelop) {
      listener.exitRelop(this);
    }
  }
}

export class LogicContext extends ParserRuleContext {
  constructor(
    parser?: OQLParser,
    parent?: ParserRuleContext,
    invokingState?: number,
  ) {
    super(parent, invokingState);
    this.parser = parser;
  }
  public AND(): TerminalNode {
    return this.getToken(OQLParser.AND, 0);
  }
  public OR(): TerminalNode {
    return this.getToken(OQLParser.OR, 0);
  }
  public NOR(): TerminalNode {
    return this.getToken(OQLParser.NOR, 0);
  }
  public and(): AndContext {
    return this.getTypedRuleContext(AndContext, 0) as AndContext;
  }
  public or(): OrContext {
    return this.getTypedRuleContext(OrContext, 0) as OrContext;
  }
  public nor(): NorContext {
    return this.getTypedRuleContext(NorContext, 0) as NorContext;
  }
  public get ruleIndex(): number {
    return OQLParser.RULE_logic;
  }
  public enterRule(listener: OQLListener): void {
    if (listener.enterLogic) {
      listener.enterLogic(this);
    }
  }
  public exitRule(listener: OQLListener): void {
    if (listener.exitLogic) {
      listener.exitLogic(this);
    }
  }
}

export class AndContext extends ParserRuleContext {
  constructor(
    parser?: OQLParser,
    parent?: ParserRuleContext,
    invokingState?: number,
  ) {
    super(parent, invokingState);
    this.parser = parser;
  }
  public get ruleIndex(): number {
    return OQLParser.RULE_and;
  }
  public enterRule(listener: OQLListener): void {
    if (listener.enterAnd) {
      listener.enterAnd(this);
    }
  }
  public exitRule(listener: OQLListener): void {
    if (listener.exitAnd) {
      listener.exitAnd(this);
    }
  }
}

export class OrContext extends ParserRuleContext {
  constructor(
    parser?: OQLParser,
    parent?: ParserRuleContext,
    invokingState?: number,
  ) {
    super(parent, invokingState);
    this.parser = parser;
  }
  public get ruleIndex(): number {
    return OQLParser.RULE_or;
  }
  public enterRule(listener: OQLListener): void {
    if (listener.enterOr) {
      listener.enterOr(this);
    }
  }
  public exitRule(listener: OQLListener): void {
    if (listener.exitOr) {
      listener.exitOr(this);
    }
  }
}

export class NorContext extends ParserRuleContext {
  constructor(
    parser?: OQLParser,
    parent?: ParserRuleContext,
    invokingState?: number,
  ) {
    super(parent, invokingState);
    this.parser = parser;
  }
  public get ruleIndex(): number {
    return OQLParser.RULE_nor;
  }
  public enterRule(listener: OQLListener): void {
    if (listener.enterNor) {
      listener.enterNor(this);
    }
  }
  public exitRule(listener: OQLListener): void {
    if (listener.exitNor) {
      listener.exitNor(this);
    }
  }
}

export class FieldContext extends ParserRuleContext {
  constructor(
    parser?: OQLParser,
    parent?: ParserRuleContext,
    invokingState?: number,
  ) {
    super(parent, invokingState);
    this.parser = parser;
  }
  public STRING(): TerminalNode {
    return this.getToken(OQLParser.STRING, 0);
  }
  public get ruleIndex(): number {
    return OQLParser.RULE_field;
  }
  public enterRule(listener: OQLListener): void {
    if (listener.enterField) {
      listener.enterField(this);
    }
  }
  public exitRule(listener: OQLListener): void {
    if (listener.exitField) {
      listener.exitField(this);
    }
  }
}

export class SortContext extends ParserRuleContext {
  constructor(
    parser?: OQLParser,
    parent?: ParserRuleContext,
    invokingState?: number,
  ) {
    super(parent, invokingState);
    this.parser = parser;
  }
  public get ruleIndex(): number {
    return OQLParser.RULE_sort;
  }
  public enterRule(listener: OQLListener): void {
    if (listener.enterSort) {
      listener.enterSort(this);
    }
  }
  public exitRule(listener: OQLListener): void {
    if (listener.exitSort) {
      listener.exitSort(this);
    }
  }
}

export class ValueContext extends ParserRuleContext {
  constructor(
    parser?: OQLParser,
    parent?: ParserRuleContext,
    invokingState?: number,
  ) {
    super(parent, invokingState);
    this.parser = parser;
  }
  public STRING_list(): TerminalNode[] {
    return this.getTokens(OQLParser.STRING);
  }
  public STRING(i: number): TerminalNode {
    return this.getToken(OQLParser.STRING, i);
  }
  public COMMA_list(): TerminalNode[] {
    return this.getTokens(OQLParser.COMMA);
  }
  public COMMA(i: number): TerminalNode {
    return this.getToken(OQLParser.COMMA, i);
  }
  public get ruleIndex(): number {
    return OQLParser.RULE_value;
  }
  public enterRule(listener: OQLListener): void {
    if (listener.enterValue) {
      listener.enterValue(this);
    }
  }
  public exitRule(listener: OQLListener): void {
    if (listener.exitValue) {
      listener.exitValue(this);
    }
  }
}
